115-AKS-NGINX-001/201-K8s-Deployments/202-K8s-App-001/2-app-deployment.yaml
#################################################################################################################
# The deployment for the application
#################################################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-deployment
  namespace: app2
spec:
  selector:
    matchLabels:
      app: app2
  replicas: 1
  template:
    metadata:
      labels:
        app: app2
    spec:
      nodeSelector:
        nodeType: application-node
      containers:
      - name: app2
        image: cpolydorou/httpdselfsigned:latest
        ports:
        - containerPort: 9000
        resources:
          requests:
            cpu: "800m"
            memory: "512Mi"      
          limits:
            cpu: "800m"
            memory: "512Mi"
