115-AKS-NGINX-001/201-K8s-Deployments/202-K8s-App-001/3-app-service.yaml
###################################################################################################################
# The deployment of the application's service
###################################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: app2-service
  namespace: app2
spec:
  selector:
    app: app2
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
  type: ClusterIP
